library/pod-security-policy/selinux/samples/psp-selinux-v2/disallowed_ephemeral.yaml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-selinux-disallowed
    labels:
        app: nginx-selinux
spec:
  ephemeralContainers:
  - name: nginx
    image: nginx
    securityContext:
      seLinuxOptions:
        type: svirt_lxc_net_t
        user: sysadm_u
        role: sysadm_r
